bk_ida/gccida/c2/ix86_cc_mode
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/i386.c:7620:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  ix86_cc_mode( rtx_code code, rtx op0, rtx op1) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/i386.c:7620:29: error: must use 'enum' tag to refer to type 'rtx_code'
machine_mode  ix86_cc_mode( rtx_code code, rtx op0, rtx op1) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/i386.c:7622:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/i386.c:7624:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)op0 >> 14) & 0x3FC)) == MODE_FLOAT ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/i386.c:7624:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)op0 >> 14) & 0x3FC)) == MODE_FLOAT ) 
                                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_cc_mode/src/obj/i386.o] Error 1
